Rename to BasicRules

--- a/BasicRules.Tests/BasicRules.Tests.csproj
+++ b/BasicRules.Tests/BasicRules.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OpusRulz\OpusRulz.csproj" />
+    <ProjectReference Include="..\BasicRules\BasicRules.csproj" />
   </ItemGroup>
 
 </Project>
